# my_riscv_emulators

./: .gitignore  README.md  push (Copy).sh  push.sh
rvvm/: .clang-format  .gitignore  .mailmap  CMakeLists.txt  Makefile  README.md  project.mk
rvvm/.github/ISSUE_TEMPLATE/: bug_report.md
rvvm/.github/workflows/: build.yml  codeql.yml
rvvm/include/rvvm/: rvvm.h  rvvm_base.h  rvvm_blk.h  rvvm_char.h  rvvm_fb.h  rvvm_fdt.h  rvvm_gpio.h  rvvm_hid.h  rvvm_i2c.h  rvvm_irq.h  rvvm_pci.h  rvvm_region.h  rvvm_snapshot.h  rvvm_usb.h  rvvm_vmm.h
rvvm/src/: atomics.c  atomics.h  bit_ops.h  blk_io.c  blk_io.h  compiler.h  dlib.c  dlib.h  elf_load.c  elf_load.h  fdtlib.c  fdtlib.h  feature_test.h  fpu_lib.c  fpu_lib.h  fpu_types.h  gdbstub.c  gdbstub.h  hashmap.c  hashmap.h  main.c  mem_ops.h  networking.c  networking.h  rcu_lib.c  rcu_lib.h  ringbuf.c  ringbuf.h  riscv_cpu.c  riscv_cpu.h  riscv_csr.c  riscv_csr.h  riscv_hart.c  riscv_hart.h  riscv_mmu.c  riscv_mmu.h  riscv_priv.c  riscv_priv.h  rvtimer.c  rvtimer.h  (+21 more)
rvvm/src/bindings/jni/: rvvm_jni.c  tiny-jni.h
rvvm/src/bindings/jni/lekkit/rvvm/: DS1742.java  Framebuffer.java  I2CBus.java  NVMeDrive.java  PCIBus.java  PLIC.java  RTL8169.java  RVVMMachine.java  RVVMNative.java
rvvm/src/cpu/: riscv32_interpreter.c  riscv64_interpreter.c  riscv_atomics.h  riscv_base.h  riscv_common.h  riscv_compressed.h  riscv_fpu.c  riscv_fpu.h  riscv_interpreter.h  riscv_jit.h  riscv_vector.h
rvvm/src/devices/: alsa.c  ata.c  ata.h  bochs-display.c  bochs-display.h  chardev.h  chardev_term.c  eth-oc.c  eth-oc.h  framebuffer.c  framebuffer.h  gpio-sifive.c  gpio-sifive.h  gpio_api.h  hid-keyboard.c  hid-mouse.c  hid_api.h  hid_dev.h  i2c-hid.c  i2c-hid.h  i2c-oc.c  i2c-oc.h  mtd-physmap.c  mtd-physmap.h  ns16550a.c  ns16550a.h  nvme.c  nvme.h  pci-bus.c  pci-bus.h  pci-vfio.c  pci-vfio.h  ps2-altera.c  ps2-altera.h  ps2-keyboard.c  ps2-mouse.c  riscv-aclint.c  riscv-aclint.h  riscv-aplic.c  riscv-aplic.h  (+19 more)
rvvm/src/gui/: gui_rvvm.c  gui_window.c  gui_window.h  haiku_window.cpp  sdl_window.c  wayland_client_protocols.h  wayland_window.c  win32_window.c  x11_window.c
rvvm/src/rvjit/: rvjit.c  rvjit.h  rvjit_arm.h  rvjit_arm64.h  rvjit_emit.c  rvjit_emit.h  rvjit_riscv.h  rvjit_x86.h
rvvm/src/vmm/: vmm_kvm.h
tlib/: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  address-translation.c  atomic-intrinsics.c  atomic.c  callbacks.c  cpu-exec.c  debug.c  exec.c  exports.c  hash-table-store-test.c  helper.c  infrastructure.c  profile-helper.c  tlib-alloc.c
tlib/arch/: translate-all.c
tlib/arch/arm/: arch_callbacks.c  arch_callbacks.h  arch_exports.c  arch_exports.h  common.h  configuration_signals.c  configuration_signals.h  cpu.h  cpu_registers.c  cpu_registers.h  helper.c  helper.h  iwmmxt_helper.c  mve_helper.c  neon_helper.c  op_helper.c  pmu.c  pmu.h  system_registers.c  system_registers.h  translate.c  translate_lob.h  translate_mve.h  translate_vfp.h
tlib/arch/arm64/: arch_callbacks.c  arch_callbacks.h  arch_exports.c  arch_exports.h  arm_ldst.h  cpu-param.h  cpu.h  cpu_h_epilogue.h  cpu_names.h  cpu_registers.c  cpu_registers.h  crc32.c  crypto_helper.c  decode-a32-uncond.c.inc  decode-a32.c.inc  decode-neon-dp.c.inc  decode-neon-ls.c.inc  decode-neon-shared.c.inc  decode-sme-fa64.c.inc  decode-sve.c.inc  decode-t16.c.inc  decode-t32.c.inc  decode-vfp-uncond.c.inc  decode-vfp.c.inc  helper-a64.c  helper-a64.h  helper-sve.h  helper.c  helper.h  helper_v7.c  iwmmxt_helper.c  mmu.c  mmu.h  mte_helper.c  neon_helper.c  op_helper.c  stubs.h  sve_helper.c  sve_ldst_internal.h  syndrome.h  (+13 more)
tlib/arch/arm_common/: arch_exports_common.c  arch_exports_common.h  cpu_common.h  helper_common.c  helper_common.h  op_addsub.h  system_registers_common.h  tightly_coupled_memory.c  tightly_coupled_memory.h  translate_common.c  translate_common.h  vec_common.c  vec_common.h
tlib/arch/i386/: arch_callbacks.c  arch_callbacks.h  arch_exports.c  arch_exports.h  cpu.h  cpu_registers.c  cpu_registers.h  cpuid.c  helper.c  helper_template.h  op_helper.c  ops_sse.h  svm.h  translate.c  x86.c
tlib/arch/ppc/: arch_callbacks.h  arch_exports.c  arch_exports.h  cpu.h  cpu_registers.c  cpu_registers.h  helper.c  helper_regs.h  op_helper.c  translate.c
tlib/arch/riscv/: arch_callbacks.c  arch_callbacks.h  arch_exports.c  arch_exports.h  cpu.h  cpu_bits.h  cpu_registers.c  cpu_registers.h  fpu_helper.c  fpu_vector_helper_template.h  helper.c  helper.h  instmap.h  op_helper.c  pmp.c  pmp.h  translate.c  vector_helper.c  vector_helper_template.h
tlib/arch/sparc/: arch_callbacks.h  arch_exports.c  arch_exports.h  cpu.h  cpu_registers.c  cpu_registers.h  helper.c  helper.h  op_helper.c  translate.c
tlib/arch/xtensa/: arch_callbacks.c  arch_callbacks.h  arch_exports.c  arch_exports.h  core-apollolake.c  core-baytrail.c  core-cannonlake.c  core-dc233c.c  core-de212.c  core-de233_fpu.c  core-dsp3400.c  core-esp32.c  core-esp32s2.c  core-esp32s3.c  core-haswell.c  core-icelake.c  core-imx8.c  core-imx8m.c  core-sample_controller.c  core-test_kc705_be.c  core-tigerlake.c  (+18 more)
tlib/include/: address-translation.h  atomic-intrinsics.h  atomic.h  bit_helper.h  callbacks.h  compiler.h  cpu-all.h  cpu-common.h  cpu-defs.h  debug.h  def-helper.h  disas_context_base.h  exec-all.h  exports.h  global_helper.h  hash-table-store-test.h  infrastructure.h  int128.h  osdep.h  softmmu_defs.h  softmmu_exec.h  softmmu_header.h  softmmu_template.h  targphys.h  tb-helper.h  tlib-alloc.h  tlib-queue.h  ttable.h  unwind.h
tlib/softfloat-2/: softfloat-2-macros.h  softfloat-2-specialize.h  softfloat-2.c  softfloat-2.h
tlib/tcg/: CMakeLists.txt  additional.c  additional.h  bswap.h  host-utils.c  host-utils.h  optimize.c  tcg-additional.h  tcg-gvec-desc.h  tcg-memop.h  tcg-mo.h  tcg-op-atomic.h  tcg-op-gvec.c  tcg-op-gvec.h  tcg-op-vec.c  tcg-op.h  tcg-opc.h  tcg-runtime-gvec.c  tcg-runtime.c  tcg-runtime.h  tcg.c  tcg.h
tlib/tcg/aarch64/: tcg-target.c  tcg-target.h
tlib/tcg/arm/: tcg-target.c  tcg-target.h
tlib/tcg/i386/: tcg-target.c  tcg-target.h
(+33 files in other folders)
